Cloud UI E2E - additional distributed workflow

--- a/test/testkube/ui-e2e/crd-workflow/cloud-ui-e2e.yaml
+++ b/test/testkube/ui-e2e/crd-workflow/cloud-ui-e2e.yaml
@@ -54,3 +54,74 @@ spec:
       paths:
       - playwright-report/**
       - test-results/**
+---
+kind: TestWorkflow
+apiVersion: testworkflows.testkube.io/v1
+metadata:
+  name: cloud-ui-e2e-distributed
+  labels:
+    core-tests: workflows
+    artifacts: "true"
+    distributed: "true"
+    junit: "true"
+spec:
+  content:
+    git:
+      uri: https://github.com/kubeshop/testkube-cloud-api.git
+      revision: '{{ config.GIT_REVISION }}'
+      paths:
+      - js/packages/e2e-tests
+      usernameFrom:
+        secretKeyRef:
+          name: 'testkube-agent-secrets'
+          key: 'CLOUD_UI_E2E_GITHUB_USERNAME'
+      tokenFrom:
+        secretKeyRef:
+          name: 'testkube-agent-secrets'
+          key: 'CLOUD_UI_E2E_GITHUB_TOKEN'
+  job:
+    activeDeadlineSeconds: 600
+  config:
+    CLOUD_BASE_URL: {type: string, default: 'https://app.testkube.dev'}
+    GIT_REVISION: {type: string, default: 'main'}
+    SHARDS: {type: integer, default: 10}
+  container:
+    workingDir: /data/repo/js/packages/e2e-tests
+    image: mcr.microsoft.com/playwright:v1.44.1-focal
+    env:
+    - name: CLOUD_BASE_URL
+      value: '{{ config.CLOUD_BASE_URL }}'
+    - name: CLOUD_API_URL
+      value: 'https://api.testkube.dev'
+    - name: TEST_ORG_ID
+      value: 'tkcorg_9deb42dda2197657'
+    - name: TEST_ENV_ID # Env with connected agent (Testkube-cloud-test-dev-E2E) - used for running some of the tests
+      value: 'tkcenv_f2eedeef4063f90f'
+    - name: TEST_FIXTURE_USER # Test user having access to connected environment
+      value: 'test-user-10'
+    - name: TESTKUBE_NAMESPACE # namespace where agent is installed
+      value: 'testkube-agent-e2e'
+  steps:
+  - name: Install dependencies
+    shell: npm install --save-dev @playwright/test@1.44.1 && npm ci
+  - name: Run tests
+    parallel:
+      description: "Shard: {{ index + 1 }}/{{ count }}"
+      count: 'config.SHARDS'
+      parallelism: 2
+      transfer:
+      - from: /data/repo
+      container:
+        resources:
+          requests:
+            cpu: 1500m
+            memory: 1500Mi
+      run:
+        shell: 'mkdir /data/artifacts && npx playwright test --reporter=list,junit --shard={{ index + 1 }}/{{ count }}'
+        env:
+        - name: PLAYWRIGHT_JUNIT_OUTPUT_NAME
+          value: "/data/artifacts/junit-report-{{ index + 1 }}.xml"
+      artifacts:
+        workingDir: /data/artifacts/
+        paths:
+        - '**/*'
