replace bitnami charts

--- a/k8s/helm/testkube/Chart.yaml
+++ b/k8s/helm/testkube/Chart.yaml
@@ -10,12 +10,12 @@ dependencies:
     repository: "file://../testkube-operator"
   - name: mongodb
     condition: mongodb.enabled
-    version: 13.10.1
-    repository: "file://../mongodb"
+    version: 8.0.13-0
+    repository: oci://us-east1-docker.pkg.dev/testkube-cloud-372110/testkube
   - name: postgresql
     condition: postgresql.enabled
-    version: 16.3.0
-    repository: "file://../postgresql"
+    version: 0.1.0
+    repository: oci://us-east1-docker.pkg.dev/testkube-cloud-372110/testkube
   - name: nats
     condition: testkube-api.nats.enabled
     version: 1.2.6-3
