workflow tests - playwright - config with video recording enabled

--- a/test/cypress/crd-workflow/smoke.yaml
+++ b/test/cypress/crd-workflow/smoke.yaml
@@ -242,6 +242,7 @@ metadata:
     core-tests: workflows
     tool: cypress
     artifacts: "true"
+    artifacts-video: "true"
     category: e2e-ui-testing
 spec:
   content:
