--- a/test/playwright/crd-workflow/smoke.yaml
+++ b/test/playwright/crd-workflow/smoke.yaml
@@ -59,7 +59,7 @@ spec:
   content:
     git:
       uri: https://github.com/kubeshop/testkube
-      revision: TKC-4233/playwright-video-recording
+      revision: main
       paths:
       - test/playwright/playwright-project
   container:
@@ -229,7 +229,7 @@ metadata:
     artifacts: "true"
     junit: "true"
     category: e2e-ui-testing
-description: "Distributed Playwright with `--shard` - 2 browsers/projects, so it may *seem* things are executed twice"
+description: "Distributed Playwright with `--shard`"
 spec:
   content:
     git:
@@ -257,7 +257,7 @@ spec:
             cpu: 1500m
             memory: 1500Mi
       run:
-        shell: 'mkdir /data/artifacts && npx playwright test --reporter=list,junit --shard={{ index + 1 }}/{{ count }}' # 2 browsers/projects - may *seem* to be run twice while sharding
+        shell: 'mkdir /data/artifacts && npx playwright test --reporter=list,junit --shard={{ index + 1 }}/{{ count }}'
         env:
         - name: PLAYWRIGHT_JUNIT_OUTPUT_NAME
           value: "/data/artifacts/junit-report-{{ index + 1 }}.xml"
