workflow tests - playwright with video recording enabled, playwriht full suite updated

--- a/test/playwright/crd-workflow/smoke.yaml
+++ b/test/playwright/crd-workflow/smoke.yaml
@@ -55,6 +55,7 @@ metadata:
     junit: "true"
     playwright-traces: "on"
     category: e2e-ui-testing
+description: "Playwright project with video recording enabled (in playwright config)"
 spec:
   content:
     git:
