workflow tests - k6-browser updated

--- a/test/suites/k6-suite-full.yaml
+++ b/test/suites/k6-suite-full.yaml
@@ -17,3 +17,4 @@ spec:
       - name: k6-workflow-smoke-content-file
       - name: k6-workflow-smoke-master-image
       - name: distributed-k6-workflow-smoke
+      - name: k6-browser-workflow-smoke
