workflow tests - k6-browser - resource requests updated

--- a/test/k6/crd-workflow/smoke.yaml
+++ b/test/k6/crd-workflow/smoke.yaml
@@ -291,8 +291,8 @@ spec:
     workingDir: /data/repo/test/k6
     resources:
       requests:
-        cpu: 256m
-        memory: 256Mi
+        cpu: 1000m
+        memory: 1Gi
   job:
     activeDeadlineSeconds: 300
   steps:
