update CI to use kubeshop/mcp-server image
Signed-off-by: Dejan Zele Pejchev <pejcev.dejan@gmail.com>

--- a/.github/workflows/new-build.yaml
+++ b/.github/workflows/new-build.yaml
@@ -98,7 +98,7 @@ jobs:
         with:
           bake-target: "mcp-server-meta"
           images: |
-            kubeshop/testkube-mcp-server
+            kubeshop/mcp-server
           tags: |
             type=semver,pattern={{version}}
             type=sha,format=short,prefix=
