--- a/test/playwright/crd-workflow/smoke.yaml
+++ b/test/playwright/crd-workflow/smoke.yaml
@@ -46,6 +46,53 @@ spec:
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
+  name: playwright-workflow-smoke-video-recording
+  labels:
+    core-tests: workflows
+    tool: playwright
+    artifacts: "true"
+    artifacts-video: "true"
+    junit: "true"
+    playwright-traces: "on"
+    category: e2e-ui-testing
+description: "Playwright project with video recording enabled (in playwright config)"
+spec:
+  content:
+    git:
+      uri: https://github.com/kubeshop/testkube
+      revision: main
+      paths:
+      - test/playwright/playwright-project
+  container:
+    image: mcr.microsoft.com/playwright:v1.56.1
+    resources:
+      requests:
+        cpu: 1500m
+        memory: 1500Mi
+    workingDir: /data/repo/test/playwright/playwright-project
+  job:
+    activeDeadlineSeconds:  600
+  steps:
+  - name: Install dependencies
+    shell: "npm ci"
+  - name: Run tests
+    run:
+      shell: "mkdir /data/artifacts && npx playwright test --reporter=list,junit,html --trace on --config=playwright-video-recording.config.js" # separate config with video recording enabled
+      env:
+      - name: PLAYWRIGHT_JUNIT_OUTPUT_NAME
+        value: "/data/artifacts/junit-report.xml"
+      - name: PLAYWRIGHT_HTML_REPORT
+        value: /data/artifacts/playwright-report
+    steps:
+    - name: Save artifacts
+      artifacts:
+        workingDir: /data/artifacts/
+        paths:
+        - '**/*'
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
   name: playwright-workflow-smoke-command-args
   labels:
     core-tests: workflows
@@ -183,7 +230,7 @@ metadata:
     artifacts: "true"
     junit: "true"
     category: e2e-ui-testing
-description: "Distributed Playwright with `--shard` - 2 browsers/projects, so it may *seem* things are executed twice"
+description: "Distributed Playwright with `--shard`"
 spec:
   content:
     git:
@@ -211,7 +258,7 @@ spec:
             cpu: 1500m
             memory: 1500Mi
       run:
-        shell: 'mkdir /data/artifacts && npx playwright test --reporter=list,junit --shard={{ index + 1 }}/{{ count }}' # 2 browsers/projects - may *seem* to be run twice while sharding
+        shell: 'mkdir /data/artifacts && npx playwright test --reporter=list,junit --shard={{ index + 1 }}/{{ count }}'
         env:
         - name: PLAYWRIGHT_JUNIT_OUTPUT_NAME
           value: "/data/artifacts/junit-report-{{ index + 1 }}.xml"
