--- a/k8s/helm/testkube-runner/templates/role.yaml
+++ b/k8s/helm/testkube-runner/templates/role.yaml
@@ -29,6 +29,34 @@ rules:
 
 ---
 
+# Allow Agent to access leases for leader election
+{{- if .Values.pod.serviceAccount.autoCreate }}
+apiVersion: {{ include "global.capabilities.rbac.apiVersion" . }}
+kind: Role
+metadata:
+  name: "agent-lease-access-{{ .Release.Name }}"
+  namespace: "{{ .Release.Namespace }}"
+  labels:
+    {{- if .Values.global.labels }}
+    {{- toYaml .Values.global.labels | nindent 4 }}
+    {{- end }}
+  annotations:
+    {{- if .Values.global.annotations }}
+    {{- toYaml .Values.global.annotations | nindent 4 }}
+    {{- end }}
+rules:
+- apiGroups:
+    - "coordination.k8s.io"
+  resources:
+    - leases
+  verbs:
+    - get
+    - create
+    - update
+{{- end }}
+
+---
+
 {{- $anyAdditionalNamespaceWithAutoCreate := false -}}
 {{- range $ns, $data := .Values.execution.additionalNamespaces }}
 {{- $anyAdditionalNamespaceWithAutoCreate = or $anyAdditionalNamespaceWithAutoCreate (and $data.serviceAccount $data.serviceAccount.autoCreate) }}
@@ -156,29 +184,6 @@ rules:
 
 ---
 
-# Allow Agent to access leases for triggers functionality
-{{- if and .Values.pod.serviceAccount.autoCreate .Values.listener.enabled }}
-apiVersion: {{ include "global.capabilities.rbac.apiVersion" . }}
-kind: Role
-metadata:
-  name: "triggers-lease-access-{{ .Release.Name }}"
-  namespace: "{{ .Release.Namespace }}"
-  labels:
-    {{- if .Values.global.labels }}
-    {{- toYaml .Values.global.labels | nindent 4 }}
-    {{- end }}
-  annotations:
-    {{- if .Values.global.annotations }}
-    {{- toYaml .Values.global.annotations | nindent 4 }}
-    {{- end }}
-rules:
-- apiGroups: ["coordination.k8s.io"]
-  resources: ["leases"]
-  verbs: ["get", "create", "update"]
-{{- end }}
-
----
-
 # Allow Agent to watch resources for triggers functionality
 {{- if and .Values.pod.serviceAccount.autoCreate .Values.listener.enabled }}
 {{- $watchAll := .Values.listener.watchAllNamespaces }}
@@ -225,5 +230,3 @@ metadata:
 {{- end }}
 
 ---
-
-
