--- a/.builds-darwin.goreleaser.yml
+++ b/.builds-darwin.goreleaser.yml
@@ -11,6 +11,7 @@ builds:
     goos:
       - darwin
     goarch:
+      - amd64
       - arm64
     ldflags:
       - -s -w -X main.version={{.Version}}
