--- a/.builds-linux.goreleaser.yml
+++ b/.builds-linux.goreleaser.yml
@@ -12,6 +12,8 @@ builds:
       - linux
     goarch:
       - amd64
+      - arm64
+      - 386
     ldflags:
       - -s -w -X main.version={{.Version}}
       - -X main.commit={{.Commit}}
