--- a/.builds-windows.goreleaser.yml
+++ b/.builds-windows.goreleaser.yml
@@ -12,6 +12,7 @@ builds:
       - windows
     goarch:
       - amd64
+      - arm64
       - 386
     ldflags:
       - -s -w -X main.version={{.Version}}
