fix get tag steps for linux and windows installer
Signed-off-by: Dejan Zele Pejchev <pejcev.dejan@gmail.com>

--- a/.github/workflows/release-cli-manual.yaml
+++ b/.github/workflows/release-cli-manual.yaml
@@ -215,6 +215,7 @@ jobs:
 
       - name: Get tag
         id: tag
+        shell: bash
         run: |
           # Find tag pointing to current commit
           TAG=$(git describe --tags --exact-match 2>/dev/null || git describe --tags --abbrev=0 2>/dev/null || echo "")
@@ -291,6 +292,12 @@ jobs:
     if: ${{ inputs.confirm == 'yes' }}
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.ref }}
+          fetch-depth: 0
+
       - name: Get Intermediate Artifacts
         uses: actions/download-artifact@master
         with:
