--- a/.github/workflows/release-cli-manual.yaml
+++ b/.github/workflows/release-cli-manual.yaml
@@ -10,6 +10,11 @@ on:
         options:
           - 'no'
           - 'yes'
+      skip_build:
+        description: 'Skip build/release and only publish Linux packages? (for re-runs when release exists)'
+        type: boolean
+        required: false
+        default: false
 
 permissions:
   id-token: write # needed for keyless signing
@@ -24,7 +29,7 @@ jobs:
   pre_build:
     name: Pre-build
     runs-on: depot-ubuntu-22.04
-    if: ${{ inputs.confirm == 'yes' }}
+    if: ${{ inputs.confirm == 'yes' && !inputs.skip_build }}
     strategy:
       matrix:
         include:
@@ -96,7 +101,7 @@ jobs:
     name: Create and upload release-artifacts
     needs: pre_build
     runs-on: depot-ubuntu-22.04
-    if: ${{ inputs.confirm == 'yes' }}
+    if: ${{ inputs.confirm == 'yes' && !inputs.skip_build }}
 
     steps:
       - uses: actions/create-github-app-token@v2
@@ -104,7 +109,6 @@ jobs:
         with:
           app-id: 253113
           private-key: ${{ secrets.TESTKUBE_GH_APP_GITOPS_KEY }}
-          owner: kubeshop
       - name: Get GitHub App User ID
         id: get-user-id
         run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
@@ -178,7 +182,7 @@ jobs:
   build-and-publish-windows-installer:
     needs: release
     runs-on: windows-latest
-    if: ${{ inputs.confirm == 'yes' }}
+    if: ${{ inputs.confirm == 'yes' && !inputs.skip_build }}
 
     steps:
       - name: Checkout
@@ -215,7 +219,6 @@ jobs:
 
       - name: Get tag
         id: tag
-        shell: bash
         run: |
           # Find tag pointing to current commit
           TAG=$(git describe --tags --exact-match 2>/dev/null || git describe --tags --abbrev=0 2>/dev/null || echo "")
@@ -230,12 +233,9 @@ jobs:
 
       - name: Get release
         id: get_release
-        shell: bash
-        run: |
-          UPLOAD_URL=$(gh api repos/kubeshop/testkube/releases/tags/${{ steps.tag.outputs.tag }} --jq .upload_url)
-          echo "upload_url=$UPLOAD_URL" >> $GITHUB_OUTPUT
+        uses: bruceadams/get-release@v1.3.2
         env:
-          GH_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ github.token }}
 
       - name: Calculate Checksum
         id: checksum
@@ -292,7 +292,7 @@ jobs:
   build-and-publish-linux-installer:
     needs: release
     runs-on: depot-ubuntu-22.04
-    if: ${{ inputs.confirm == 'yes' }}
+    if: ${{ always() && inputs.confirm == 'yes' && (inputs.skip_build || needs.release.result == 'success') }}
 
     steps:
       - name: Checkout
@@ -301,7 +301,8 @@ jobs:
           ref: ${{ github.ref }}
           fetch-depth: 0
 
-      - name: Get Intermediate Artifacts
+      - name: Get Intermediate Artifacts (from workflow)
+        if: ${{ !inputs.skip_build }}
         uses: actions/download-artifact@master
         with:
           name: bin-artifacts
@@ -321,6 +322,15 @@ jobs:
           echo "tag=$TAG_STRIPPED" >> $GITHUB_OUTPUT
           echo "Found tag: $TAG (stripped: $TAG_STRIPPED)"
 
+      - name: Download .deb files from GitHub Release
+        if: ${{ inputs.skip_build }}
+        env:
+          VERSION: ${{steps.tag.outputs.tag}}
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          mkdir -p dist
+          gh release download ${VERSION} --pattern "testkube_${VERSION}_linux_*.deb" --dir dist
+
       - name: Publish package
         env:
           USERNAME: "aptly"
@@ -328,14 +338,20 @@ jobs:
           APTLY_URL: "repo.testkube.io:8080"
           VERSION: ${{steps.tag.outputs.tag}}
         run: |
-          ### Upload files
-          curl --fail-with-body -u ${USERNAME}:${PASSWORD} -X POST -F file=@dist/testkube_${VERSION}_linux_arm64.deb http://${APTLY_URL}/api/files/testkube
+          ### Clean temporary file directory first (in case of re-runs)
+          curl -u ${USERNAME}:${PASSWORD} -X DELETE http://${APTLY_URL}/api/files/testkube || true
 
-          ### Add file to repo
+          ### Upload files for all architectures
+          curl --fail-with-body -u ${USERNAME}:${PASSWORD} -X POST -F file=@dist/testkube_${VERSION}_linux_amd64.deb http://${APTLY_URL}/api/files/testkube
+          curl --fail-with-body -u ${USERNAME}:${PASSWORD} -X POST -F file=@dist/testkube_${VERSION}_linux_arm64.deb http://${APTLY_URL}/api/files/testkube
+          curl --fail-with-body -u ${USERNAME}:${PASSWORD} -X POST -F file=@dist/testkube_${VERSION}_linux_386.deb http://${APTLY_URL}/api/files/testkube
+
+          ### Add file to repo (forceReplace=1 replaces existing packages)
           curl --fail-with-body -u ${USERNAME}:${PASSWORD} -X POST http://${APTLY_URL}/api/repos/testkube/file/testkube?forceReplace=1
 
-          ### Create snapshot
-          curl --fail-with-body -u ${USERNAME}:${PASSWORD} -X POST -H 'Content-Type: application/json' --data '{"Name":"testkube-'${VERSION}'"}' http://${APTLY_URL}/api/repos/testkube/snapshots
+          ### Create snapshot with timestamp to avoid conflicts on re-runs
+          SNAPSHOT_NAME="testkube-${VERSION}-$(date +%s)"
+          curl --fail-with-body -u ${USERNAME}:${PASSWORD} -X POST -H 'Content-Type: application/json' --data '{"Name":"'${SNAPSHOT_NAME}'"}' http://${APTLY_URL}/api/repos/testkube/snapshots
 
-          ### Publish repo
-          curl --fail-with-body -u ${USERNAME}:${PASSWORD} -X PUT -H 'Content-Type: application/json' --data '{"Snapshots": [{"Component": "main", "Name": "testkube-'${VERSION}'"}]}'}], http://repo.testkube.io:8080/api/publish/:linux/linux
+          ### Publish repo with new snapshot
+          curl --fail-with-body -u ${USERNAME}:${PASSWORD} -X PUT -H 'Content-Type: application/json' --data '{"Snapshots": [{"Component": "main", "Name": "'${SNAPSHOT_NAME}'"}]}' http://repo.testkube.io:8080/api/publish/:linux/linux
